# dev-psycho-ai-agency

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Personal AI DevOS v1.md  README.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  pyrightconfig.json  requirements-optional.txt  requirements.txt  setup.cfg  setup.py
__docs__/: API.md  ARCHITECTURE.md  CHANGELOG.md  DATABASE.md  SECURITY.md  SETUP.md
config/: settings.py
devtasks/: .env.example  .gitignore  README.md  docker-compose.yml
docs/: DEVELOPER_GUIDE.md  agent-catalog.md  agent-lifecycle.md  agent-specification-framework.md  architecture-overview.md  config-migration-report.md  dead-code-report.md  devos-gap-analysis.md  devos-production-readiness.md  execution-gap-report.md  final-truth-audit.md  foundation-audit.md  handover-protocol.md  kernel-test-report.md  mcp-catalog.md  mcp-operability-report.md  mcp-reality-report.md  mcp-truth-report.md  memory-architecture.md  memory-search-report.md  minimum-execution-test.md  multi-pc-readiness-report.md  orchestrator-audit.md  orchestrator-decision-engine.md  proof-docker.md  proof-fastapi-runtime.md  proof-mcp-runtime.md  proof-orchestrator-stress.md  proof-pytest.md  proof-recovery.md  reference-integrity-report.md  registry-validation-report.md  runtime-coverage-report.md  runtime-proof.md  schema-validation-report.md  system-health-report.md  system-truth-score-v2.md  system-truth-score.md  technical-debt-report.md  walkthrough.md  (+2 more)
memory/: active_context.md  architecture.md  decisions.md  lessons_learned.md  tasks.md  (+4 more)
(+231 files in other folders)
